# simpleCmake

./: .gitmodules  CMakeLists.txt  Klasa.cpp  Klasa.h  main.cpp
klasy/: Klasa2.cpp  Klasa2.h
tests/: CMakeLists.txt  Testy.cpp  mainTests.cpp
